2013-05-21 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_request.c: ApacheRequest___parse further simplified and
    made less restrictive about the combination of method and mimetype of the request
    * src/apache-2/mod_rivet.c: add debug message in exit handler

2013-05-06 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: call to 'panic' changed to fulfill the hardening
    flags that (quite oddly) fail when building against Tcl8.6 on some platforms
    or Linux distros

2013-04-30 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: improved entry for ::rivet::var with an explanation
    and example provided by Harald
    * configure.ac,VERSION: version number bumped to 2.1.2

2013-02-12 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: To avoid clash on freeing resources Tcl_Finalize
    is removed from child process cleanup (Bug #54162)

2013-02-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: fixing nasty bug introduced with Rivet 2.1. When
    method 'store' is updating the call to method update needs a flat list as
    last argument, not just a sigle valued list argument
    * doc/xml/commands.xml: Improved explanation for command abort_page
    * src/apache-2/rivetConf.c: corrected typo in header
    * src/apache-2/apache_request.c: new handling of apache requests largely
    relaxes checks on the 'Content-Type' header (Bug #53661)

2013-02-02 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_request.c,src/apache-2/mod_rivet.c: extending request
    handling also for PUT and DELETE. Applied patch provided by Jeff Lawson in
    bug report #53892 

2013-02-01 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/Makefile.am, src/Makefile.am: removed -v flag from rm command
    in install-data-hook: target to avoid incompatibility with same command's
    implementation in Solaris (Bug: #54181)

2013-01-28 Massimo Manghi <mxmanghi@apache.org>