@@ -20,7 +20,7 @@
 #apxs_libexecdir = @APXS_LIBEXECDIR@
 #apxs_libexec_LTLIBRARIES = mod_rivet.la
 
-INCLUDES = @apache_include@ -I@RIVET_BASE_INCLUDE@ -I../parser
+INCLUDES = @apache_include@ -I@RIVET_BASE_INCLUDE@ -I../parser -I../request -I../channel
 
 # ... and these two.  We want to put the libs in the package path,
 # rather than the standard library location for the system.
@@ -36,9 +36,9 @@ INCLUDES = @apache_include@ -I@RIVET_BASE_INCLUDE@ -I../parser
 #	        mod_rivet.c 				\
 #	        TclWebapache.c 				\
 #	        rivetCore.c					\
-#            rivetConf.c                 \
+#           rivetConf.c                 \
 #	        ../rivetChannel.c 			\
-#            ../parser/rivetParser.c
+#           ../parser/rivetParser.c
 
 ##mod_rivet_la_SOURCES = mod_rivet.c mod_rivet.h
 
@@ -48,10 +48,10 @@ INCLUDES = @apache_include@ -I@RIVET_BASE_INCLUDE@ -I../parser
 
 # APXS_CPPFLAGS_SHLIB
 
-# Removing libtool .la files from installation
+## Removing libtool .la files from installation
 
-install-data-hook:
-	echo 'removing unwanted libtool .la files'
-	rm -f $(DESTDIR)/$(apxs_libexecdir)/*.la
+#install-data-hook:
+#	echo 'removing unwanted libtool .la files'
+#	rm -f $(DESTDIR)/$(apxs_libexecdir)/*.la
 
 
